Fix bug #79022.  Make sure to remove listeners after the widget is destroyed so the toplevel window doesn't call back down into an undestroyed widget. r/sr=dbaron,tor